aaaand this is the last one

--- a/build.gradle
+++ b/build.gradle
@@ -13,9 +13,9 @@ apply plugin: 'net.minecraftforge.gradle'
 apply plugin: 'eclipse'
 apply plugin: 'maven-publish'
 
-version = '1.0.0'
-group = 'mod.coda.croodaceouscraft' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = 'croodaceouscraft'
+version = 'beta1'
+group = 'coda.thecroodaceousera' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+archivesBaseName = 'thecroodaceousera'
 
 sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.8' // Need this here so eclipse task generates correctly.
 
